<resources>
    <string name="app_name">Tashilul Quran</string>
    <string name="logo_des">Tashilul Quran for Android is a free Quran application for Android devices</string>
    <string name="imgDes">Tashilul Quran Background Images</string>
    <string name="paraiconDes">Tashilul Quran para Icon</string>
    <string name="arrowiconDes">Tashilul Quran Arrow Icon</string>
    <string name="p1">p1</string>
    <string name="p2">p2</string>
    <string name="p3">p3</string>
    <string name="p4">p4</string>
    <string name="p5">p5</string>
    <string name="p6">p6</string>
    <string name="p7">p7</string>
    <string name="p8">p8</string>
    <string name="p9">p9</string>
    <string name="p10">p10</string>
    <string name="p11">p11</string>
    <string name="p12">p12</string>
    <string name="p13">p13</string>
    <string name="p14">p14</string>
    <string name="p15">p15</string>
    <string name="p16">p16</string>
    <string name="p17">p17</string>
    <string name="p18">p18</string>
    <string name="p19">p19</string>
    <string name="p20">p20</string>
    <string name="p21">p21</string>
    <string name="p22">p22</string>
    <string name="p23">p23</string>
    <string name="p24">p24</string>
    <string name="p25">p25</string>
    <string name="p26">p26</string>
    <string name="p27">p27</string>
    <string name="p28">p28</string>
    <string name="p29">p29</string>
    <string name="p30">p30</string>
    <string name="empty">Empty</string>
    <string name="para_2">Para 2</string>
    <string name="para_3">Para 3</string>
    <string name="para_index">PARA Index</string>
    <string name="surah_index">SURAH Index</string>
    <string name="about">About</string>
</resources>