<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="12dp"
    android:background="@drawable/menu_background"
    tools:context="com.zaid.tashilulquran.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250sp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/tashil_ul_quran_logo"
            android:elevation="3dp"
            android:layout_centerHorizontal="true"
            android:background="#40FFFFFF"
            android:contentDescription="@string/imgDes" />
        <ImageView
            android:id="@+id/shareBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_share_24"
            android:layout_alignParentEnd="true"
            android:tooltipText="Share"
            android:padding="5dp"
            android:background="@drawable/mycircle"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


 <LinearLayout

     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
     <LinearLayout
         android:id="@+id/ResumePara"
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:background="@drawable/myractacangle"
         android:padding="5dp"
         android:layout_marginHorizontal="5dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:elevation="10dp">
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/paraindex"

             android:layout_marginStart="12dp"
             android:contentDescription="@string/paraiconDes" />

         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_weight="1"
             android:fontFamily="@font/amita_bold"
             android:text="Resume"
             android:textColor="@color/teal_700"
             android:textSize="22sp" />

         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/arrow"
             android:layout_marginEnd="15dp"
             android:contentDescription="@string/arrowiconDes" />

     </LinearLayout><LinearLayout
         android:id="@+id/pIndex"
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:background="@drawable/myractacangle"
         android:padding="5dp"
         android:layout_marginHorizontal="5dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:elevation="10dp">
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/tashil_ul_quran"

             android:layout_marginStart="12dp"
             android:contentDescription="@string/paraiconDes" />

         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/amita_bold"
             android:layout_marginStart="20dp"
             android:text="@string/para_index"
             android:textColor="@color/teal_700"
             android:textSize="22sp" />

         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/arrow"
             android:layout_marginEnd="15dp"
             android:contentDescription="@string/arrowiconDes" />

     </LinearLayout>
     <LinearLayout
         android:id="@+id/BookMarks"
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:background="@drawable/myractacangle"
         android:padding="5dp"
         android:layout_marginHorizontal="5dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:elevation="10dp">
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/baseline_collections_bookmark_24"

             android:layout_marginStart="12dp"
             android:contentDescription="@string/paraiconDes" />

         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/amita_bold"
             android:layout_marginStart="20dp"
             android:text="Bookmarks"
             android:textColor="@color/teal_700"
             android:textSize="22sp" />

         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/arrow"
             android:layout_marginEnd="15dp"
             android:contentDescription="@string/arrowiconDes" />

     </LinearLayout>
     <LinearLayout
         android:id="@+id/sIndex"
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:background="@drawable/myractacangle"
         android:layout_marginHorizontal="5dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:padding="5dp"
         android:elevation="3dp"
         android:visibility="gone">

         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/paraindex"

             android:layout_marginStart="12dp"
             android:contentDescription="@string/paraiconDes" />

         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/amita_bold"
             android:layout_marginStart="20dp"
             android:text="@string/surah_index"
             android:textColor="@color/teal_700"
             android:textSize="22sp" />

         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/arrow"
             android:layout_marginEnd="15dp"
             android:contentDescription="@string/arrowiconDes" />

     </LinearLayout>
     <LinearLayout
         android:id="@+id/Donate"
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:background="@drawable/myractacangle"
         android:layout_marginHorizontal="5dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:padding="5dp"
         android:elevation="3dp"
        >
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/donation_icon"

             android:layout_marginStart="12dp"
             android:contentDescription="@string/paraiconDes" />

         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/amita_bold"
             android:layout_marginStart="20dp"
             android:text="Donation"
             android:textColor="@color/teal_700"
             android:textSize="22sp" />

         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/arrow"
             android:layout_marginEnd="15dp"
             android:contentDescription="@string/arrowiconDes" />

     </LinearLayout>



 </LinearLayout>
    </ScrollView>
</LinearLayout>